add Categories, Courses Controller / update models to database

--- a/AllGoodEdu/appsettings.json
+++ b/AllGoodEdu/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AllGoodEdu-CA51975D-1B0B-44D3-8D8C-CBED38E685B6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=allgoodedu.database.windows.net;Database=allgoodedu;User Id=yunna;Password=Diagd1623;"
+
   },
   "Logging": {
     "LogLevel": {
