install NuGet package / store API Keys in appsettings.json file

--- a/AllGoodEdu/appsettings.json
+++ b/AllGoodEdu/appsettings.json
@@ -10,5 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "Google": {
+      "ClientId": "22255147595-kig2qk8las040rfbu8hfempu1ele73hg.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
